@@ -1,4 +1,4 @@
 DIST overlay-utils-0.2.tar.bz2 9997 RMD160 d40e51c85e8eab34d5bf4f542db9401d77c82e0d SHA1 d1b3637cc943b90935c63ef5467680a096176445 SHA256 16fdabba962975d90484299badd1afd38e4921e0af7627120d9393e577155e5f
-EBUILD overlay-utils-0.2-r2.ebuild 645 RMD160 86e079d630e7d22a31c24c1fc554fef0c89eb437 SHA1 59c1393d391c0be532948c2a31d092dfafc7548f SHA256 ebae2aac698dde0ef1413953414c300321e7f91604343258a4e6d25ad892fa9c
-MISC ChangeLog 2320 RMD160 1952b62a6c1b193bce8a509ae1252bb61a1b7a1e SHA1 a347481905ef6b118eec0ec0c7df0c7ac5de0c6c SHA256 01c479b1ce80534fa690b591f9ef542389f15600260c602fb042b9689a9751db
+EBUILD overlay-utils-0.2-r2.ebuild 686 RMD160 37a8351831ffb3c267ce2bb546452bdae5cc8dd8 SHA1 74604fa97f1d70133b22a56b6b07900211102b01 SHA256 ecda38a96cfd2794d40a67dc8a41bf11c2127603cfa81a73e745711ee682d23b
+MISC ChangeLog 2435 RMD160 d139d282331fc8142ff6b04e5cec439727fd7806 SHA1 ab720bce76cf7447522914458650918cd3bac2fa SHA256 15e0ee3afaf6f6b34c0e5a31740c3eeeab3dedfc6016f1bcae704c68ab7b1a15
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
