@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Apr 2009; Christian Ruppert <idl0r@gentoo.org>
+  overlay-utils-0.2-r2.ebuild:
+  Added missing die statement.
+
   17 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   overlay-utils-0.2-r2.ebuild:
   QA quotes around EAPI version
